objects/Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Extended_Net_Price__c</fullName>
        <formula>Unit_Net_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_Discount__c</fullName>
        <label>Line Item Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>R00N46000003QcskEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <referenceTo>Sales_Order_Custom__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>R00N46000003QcseEAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Net_Price__c</fullName>
        <formula>Standard_Price__c    *   ((100 - Line_Item_Discount__c)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OL-{00000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>